<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivityFragment">

        <TextView
            android:id="@+id/title"
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:paddingBottom="@dimen/title_bottom_margin"
            android:text="@string/my_title" />

        <Button
            android:id="@+id/button_app1"
            style="@style/ButtonPracticeApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:padding="@dimen/abc_button_padding_vertical_material"
            android:text="@string/media_streamer" />

        <Button
            android:id="@+id/button_app2"
            style="@style/ButtonPracticeApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_app1"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/super_duo1" />

        <Button
            android:id="@+id/button_app3"
            style="@style/ButtonPracticeApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_app2"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/super_duo2" />

        <Button
            android:id="@+id/button_app4"
            style="@style/ButtonPracticeApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_app3"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/ant_terminator" />

        <Button
            android:id="@+id/button_app5"
            style="@style/ButtonPracticeApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_app4"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/materialize" />

        <Button
            android:id="@+id/button_myapp"
            style="@style/ButtonMyApp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_app5"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:text="@string/capstone" />
    </RelativeLayout>
</ScrollView>